# jumpr

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  run.sh
app/: CMakeLists.txt  common.hpp  main.cpp
app/ecs/: components.hpp  ecs.hpp
app/game/: game.cpp  game.hpp  state.hpp  systems.cpp  systems.hpp
app/game/states/: level.cpp  level.hpp  pause.cpp  pause.hpp  title.cpp  title.hpp
app/resources/: audio.hpp  textures.hpp  utils.hpp
app/utils/: exit_codes.hpp  non_owning_ptr.hpp  timer.hpp  vec2.hpp
